--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "droom-app",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "apollo-boost": "^0.3.1",
+    "jwt-decode": "^2.2.0",
+    "react": "^16.8.5",
+    "react-apollo": "^2.5.3",
+    "react-dom": "^16.8.5",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "semantic-ui-react": "^0.86.0"
   },
   "scripts": {
     "start": "react-scripts start",
