--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A starter for React-Apollo-GraphQL projects",
   "main": "server.js",
   "scripts": {
+    "start": "npm run server.js",
     "server": "nodemon server.js",
     "client": "cd client && npm start",
     "dev": "concurrently --names \"server,client\" \"npm run server --silent\" \"npm run client --silent\""
