--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
   "dependencies": {
     "apollo-server-express": "^1.3.6",
     "bcrypt": "^2.0.1",
-    "body-parser": "^1.18.3",
     "concurrently": "^3.5.1",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.2",
+    "helmet": "^3.16.0",
     "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.1.3"
+    "mongoose": "^5.1.3",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
