--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "apollo-boost": "^0.3.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.8.5",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-apollo": "^2.5.3",
     "react-dom": "^16.8.5",
     "react-router-dom": "^5.0.0",
