--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "express-graphql": "^0.8.0",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.2",
     "jsonwebtoken": "^8.2.1",
