--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "react": "^16.8.5",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-apollo": "^2.5.3",
+    "react-datepicker": "^2.4.0",
     "react-dom": "^16.8.5",
+    "react-pluralize": "^1.5.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "semantic-ui-css": "^2.4.1",
