--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "apollo-boost": "^0.3.1",
+    "apollo-upload-client": "^10.0.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.8.5",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-apollo": "^2.5.3",
     "react-datepicker": "^2.4.0",
     "react-dom": "^16.8.5",
+    "react-dropzone": "^10.1.4",
     "react-pluralize": "^1.5.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
