--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^1.3.6",
+    "apollo-upload-server": "^7.1.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "concurrently": "^3.5.1",
