--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "apollo-boost": "^0.3.1",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-link-http": "^1.5.14",
     "apollo-upload-client": "^10.0.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.8.5",
